# cpp-app

./: .gitignore  CMakeLists.txt  app.cc  conanfile.txt  cool-cpp.cc  cool-cpp.cxx  db-impl.cc  db-impl.h  db.h  foo-dto.proto  foo.pb.cc  foo.pb.h  foo.proto  sensor.pb.cc  sensor.pb.h  sensor.proto
